deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11.6.2
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: pvc-database # This is the actual PVC name
